<?xml version="1.0"?>
<package format="2">
	<name>icp</name>
	<version>0.0.0</version>
	<description>This package integrates the correction with the erroneous transform data and maintains the corrected transform of the robot/vehicle</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="siddharth@todo.todo">siddharth</maintainer>
	<maintainer email="shreyanshdarshan1@gmail.com">Shreyansh Darshan</maintainer>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>

	<url type="website">http://www.agv.iitkgp.ac.in/</url>

	<author email="shreyanshdarshan1@gmail.com">Shreyansh Darshan</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_export_depend>pcl_conversions</build_export_depend>
	<build_export_depend>pcl_ros</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<exec_depend>pcl_conversions</exec_depend>
	<exec_depend>pcl_ros</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
